samples/_failures_safe/1761187084_ddde96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c86de32.c: In function ‘main’:
./samples/SAFE/__tmp_1c86de32.c:146:5: error: expected expression at end of input
  146 |     size_t decompressed_size =
      |     ^~~~~~
./samples/SAFE/__tmp_1c86de32.c:146:5: error: expected declaration or statement at end of input
